--- a/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
+++ b/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
@@ -804,11 +804,11 @@
                             </div>
                         </div>
 
-                        <datalist id="workOptions">
+<!--                         <datalist id="workOptions">
                             {% for work in works %}
                                 <option value="{{ work.name }}" data-id="{{ work.id }}"></option>
                             {% endfor %}
-                        </datalist>
+                        </datalist> -->
 
                         <button type="button" class="btn btn-primary mb-4" id="addWork">
                             <i class="fas fa-plus me-2"></i>Добавить работу
