Удаление обязательности поля с цветом

--- a/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
+++ b/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
@@ -1217,8 +1217,8 @@
                     works: []
                 };
 
-                if (!formData.color_id || !formData.person_id) {
-                    alert('Пожалуйста, выберите цвет и сотрудника из списка');
+                if (!formData.person_id) {
+                    alert('Пожалуйста, выберите сотрудника из списка');
                     return;
                 }
 
