--- a/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
+++ b/calendar_app/AutoDoc/templates/AutoDoc/assignment_details.html
@@ -1209,7 +1209,7 @@
                     vin: document.getElementById('vin').value,
                     car_id: carId,
                     car_number: document.getElementById('car_number').value,
-                    color_id: document.getElementById('color_id').value,
+                    color_id: document.getElementById('color_id').getAttribute('data-id') || null,
                     person_id: document.getElementById('person_id').getAttribute('data-id'),
                     description: document.getElementById('description').value,
                     hour: document.getElementById('hour').value,
@@ -1416,7 +1416,7 @@
                         car_id: document.getElementById('edit_car_id').value,
                         car_number: document.getElementById('edit_car_number').value,
                         vin: document.getElementById('edit_vin').value,
-                        color_id: document.getElementById('edit_color_id').getAttribute('data-id'),
+                        color_id: document.getElementById('edit_color_id').getAttribute('data-id') || null,
                         person_id: document.getElementById('edit_person_id').getAttribute('data-id'),
                         description: document.getElementById('edit_description').value,
                         works: []
